--- a/app/src/main/res/layout/dialog_devconnected_layout.xml
+++ b/app/src/main/res/layout/dialog_devconnected_layout.xml
@@ -1,4 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
@@ -20,4 +21,23 @@
         android:layout_marginRight="4dp"
         android:layout_marginBottom="16dp"
         android:hint="Pin"/>
+    <Button
+        android:id="@+id/dialog_positive_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="OK"
+        android:layout_alignParentRight="true"
+        android:background="#dde5ad"
+        android:layout_below="@id/dev_pin"
+        />
+    <Button
+        android:id="@+id/dialog_negative_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Cancel"
+        android:layout_toLeftOf="@id/dialog_positive_btn"
+        android:background="#dde5ad"
+        android:layout_marginRight="3dp"
+        android:layout_alignBaseline="@id/dialog_positive_btn"
+        />
 </LinearLayout>
