--- a/app/src/main/res/layout/register_layout.xml
+++ b/app/src/main/res/layout/register_layout.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="vertical"
-    android:fillViewport="false">
+    android:fillViewport="false"
+    android:background="@color/colorBackground">
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/colorBackground">
 
     <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/toolbar"
@@ -116,6 +118,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:onClick="button_register"
-        android:text="Register" />
-</LinearLayout>
+        android:text="Register"
+        android:textColor="@color/colorTextButton"
+        android:background="@drawable/button_standard" />
+</LinearLayout >
 </ScrollView>
