--- a/app/src/main/res/layout/status_layout.xml
+++ b/app/src/main/res/layout/status_layout.xml
@@ -24,40 +24,36 @@
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="75dp">
+        android:layout_marginTop="75dp"
+        android:orientation="horizontal">
 
         <Button
             android:id="@+id/btn_temp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="left"
-            android:text="@string/temperature"
-            />
+            android:text="@string/temperature" />
 
         <TextView
             android:id="@+id/txt_vw_temp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="left"
-            android:text="foo"
-            />
+            android:text="foo" />
 
         <Button
             android:id="@+id/btn_hum"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
-            android:text="@string/humidity"
-            />
+            android:text="@string/humidity" />
 
         <TextView
             android:id="@+id/txt_vw_hum"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
-            android:text="bar"
-            />
+            android:text="bar" />
 
 
     </LinearLayout>
@@ -65,8 +61,8 @@
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="10dp">
+        android:layout_marginTop="10dp"
+        android:orientation="horizontal">
 
 
         <Button
@@ -74,40 +70,37 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="left"
-            android:text="ON"/>
+            android:text="ON" />
 
         <Button
             android:id="@+id/btOff"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="left"
-            android:text="OFF"/>
+            android:text="OFF" />
 
         <Button
             android:id="@+id/btRefresch"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="REFRESH"
-            />
+            android:text="REFRESH" />
 
 
     </LinearLayout>
 
-    <android.support.constraint.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
 
 
         <com.jjoe64.graphview.GraphView
             android:id="@+id/graph"
             android:layout_width="match_parent"
             android:layout_height="200dp"
-            android:layout_marginLeft="8dp"
             android:layout_marginBottom="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
+            android:layout_marginTop="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
