Dialog Dev Connected layout, bottoni allineati

--- a/app/src/main/res/layout/dialog_devconnected_layout.xml
+++ b/app/src/main/res/layout/dialog_devconnected_layout.xml
@@ -34,10 +34,9 @@
         android:id="@+id/dialog_negative_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="90dp"
+        android:layout_marginTop="-49dp"
         android:text="Cancel"
-        android:layout_toLeftOf="@id/dialog_positive_btn"
         android:background="#dde5ad"
-        android:layout_marginRight="3dp"
-        android:layout_alignBaseline="@id/dialog_positive_btn"
-        />
+        android:layout_marginRight="3dp" />
 </LinearLayout>
