--- a/app/src/main/res/drawable/add_button_selector.xml
+++ b/app/src/main/res/drawable/add_button_selector.xml
@@ -4,14 +4,14 @@
             <item android:right="5dp" android:top="5dp">
                 <shape>
                     <corners android:radius="10dp" />
-                    <solid android:color="#7c3f51b5" />
+                    <solid android:color="@color/colorPrimaryDark" />
                 </shape>
             </item>
             <item android:bottom="2dp" android:left="2dp">
                 <shape>
                     <gradient android:angle="270"
-                        android:endColor="#303F9F" android:startColor="#3F51B5" />
-                    <stroke android:width="1dp" android:color="#303F9F" />
+                        android:endColor="@color/colorPrimaryDark" android:startColor="@color/colorPrimaryDark" />
+                    <stroke android:width="1dp" android:color="@color/colorPrimaryDark" />
                     <corners android:radius="10dp" />
                     <padding android:bottom="10dp" android:left="10dp"
                         android:right="10dp" android:top="10dp" />
