--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,12 +27,11 @@
             android:id="@+id/logout"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_gravity="bottom"
+            android:layout_marginTop="180dp"
             android:drawablePadding="10dp"
             android:gravity="center_vertical|left"
             android:drawableLeft="@android:drawable/ic_lock_power_off"
             android:text="Logout"
-            android:textColor="#000000"
             android:textSize="18dp"
             android:clickable="true"/>
 
