--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -8,15 +8,13 @@
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
+        android:layout_height="wrap_content">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay">
+            android:background="@color/colorPrimaryDark">
             <TextView
                 android:id="@+id/lbl_title"
                 android:layout_width="wrap_content"
@@ -40,7 +38,7 @@
         android:layout_margin="@dimen/fab_margin"
         app:srcCompat="@android:drawable/ic_input_add"
         android:clickable="true"
-        app:backgroundTint="#3F51B5"
+        android:backgroundTint="@color/colorPrimaryDark"
         app:elevation="10dp"/>
 
 </android.support.design.widget.CoordinatorLayout>
