--- a/app/src/main/res/drawable/textview_roundcorner.xml
+++ b/app/src/main/res/drawable/textview_roundcorner.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <gradient
-        android:startColor="#fff"
-        android:endColor="#303F9F"
+        android:startColor="@color/colorPrimaryDark"
+        android:endColor="@color/colorPrimaryDark"
         android:angle="270"/>
 
     <corners android:radius="5dp" />
