--- a/app/src/main/res/layout/device_row.xml
+++ b/app/src/main/res/layout/device_row.xml
@@ -4,15 +4,14 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="20dp"
-    android:textSize="40dp"
-    android:textColor="#000000"
+    android:textSize="18dp"
+    android:textColor="@color/colorBackground"
     android:text="ciaooo"
-    android:textStyle="bold"
     android:padding="12dp"
     android:background="@drawable/textview_roundcorner"
     android:shadowColor="#bababa"
     android:shadowDx="1"
     android:shadowDy="1"
     android:shadowRadius="2"
-    android:elevation="10dp"
+    android:elevation="8dp"
     />
