--- a/app/src/main/res/layout/storico_row_layout.xml
+++ b/app/src/main/res/layout/storico_row_layout.xml
@@ -15,7 +15,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="AI-Farmer"
-            android:textColor="#ffffff"
+            android:textColor="@color/colorText"
             android:textSize="20dp" />
     </android.support.v7.widget.Toolbar>
 </RelativeLayout>
