backgoroud prova giallo

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -13,6 +13,7 @@
 
     <!-- List view abbellire -->
     <ListView
+        android:layout_marginTop="4dp"
         android:id="@+id/lst_vw_devices"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
