--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="colorTextButton">#434955</color>
     <color name="colorBackground">#f2f3f5</color>
     <color name="colorEditTextFocused">#33bbff</color>
+    <color name="colorBackgroundYellow">#91ffbf00</color>
 </resources>
