--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.awaisahmed.ai_farmer.MainActivity">
+    tools:context="com.example.awaisahmed.ai_farmer.MainActivity"
+    android:background="@color/colorBackgroundYellow">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
