--- a/app/src/main/res/layout/login_layout.xml
+++ b/app/src/main/res/layout/login_layout.xml
@@ -7,13 +7,12 @@
     android:fillViewport="false"
     android:focusable="true"
     android:focusableInTouchMode="true"
-    android:background="@color/colorBackground">
+    android:background="@color/colorBackgroundYellow">
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@color/colorBackground">
+    android:orientation="vertical">
 
     <!-- TOOLBAR -->
     <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
