funziona tutto sono un grande

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,8 @@
     <color name="colorPrimaryDark">#00bf80</color>
     <color name="colorAccent">#FF4081</color>
     <color name="colorButton">#33bbff</color>
-    <color name="colorText">#676f7c</color>
+    <color name="colorText">#ffffff</color>
+    <color name="colorTextGrigio">#676f7c</color>
     <color name="colorTextButton">#434955</color>
     <color name="colorBackground">#f2f3f5</color>
     <color name="colorEditTextFocused">#33bbff</color>
