--- a/app/src/main/res/layout/add_dev_layout.xml
+++ b/app/src/main/res/layout/add_dev_layout.xml
@@ -17,7 +17,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="AI-Farmer"
-            android:textColor="@color/colorText"
+            android:textColor="@color/colorToolbar"
             android:textSize="20dp" />
     </android.support.v7.widget.Toolbar>
 
