--- a/app/src/main/res/layout/device_row.xml
+++ b/app/src/main/res/layout/device_row.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id = "@+id/txt_device_row"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/txt_device_row"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="20dp"
     android:textSize="18dp"
     android:textColor="@color/colorLista"
-    android:text="ciaooo"
+    android:drawableLeft="@drawable/ic_mr_button_connected_18_dark"
+    android:text="Ciaoo"
     android:padding="12dp"
     android:background="@drawable/textview_roundcorner"
     android:shadowColor="#bababa"
     android:shadowDx="1"
     android:shadowDy="1"
     android:shadowRadius="2"
-    android:elevation="10dp"
-    />
+    android:elevation="10dp" />
