--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -24,5 +24,5 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="24dp"
-        android:textColor="@color/colorText"/>
+        android:textColor="@color/colorTextGrigio"/>
 </LinearLayout>
