--- a/app/src/main/res/layout/list_row_view.xml
+++ b/app/src/main/res/layout/list_row_view.xml
@@ -11,16 +11,19 @@
         android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="3dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:text="TextView"
         android:typeface="normal"
-        android:textColor="@color/colorLista"
-        android:textSize="25dp"
-        android:textStyle="bold"
+        android:textColor="@color/colorTextGrigio"
+        android:textSize="18dp"
         android:padding="12dp"
         android:shadowDx="1"
         android:shadowDy="1"
         android:shadowRadius="2"
-        android:elevation="5dp"/>
+        android:elevation="5dp"
+        android:background="@drawable/textview_roundcorner"/>
         <!--android:onClick="title"-->
 
 </LinearLayout>
